updated variant-select placeholder, prompt text & display logic

--- a/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
+++ b/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
@@ -50,6 +50,8 @@
       nz-button
       nzBlock
       class="expression-button"
+      nz-tooltip
+      nzTooltipTitle="Add/Edit Complex MP Expression"
       (click)="this.onShowExpClick$.next()">
       <span
         nz-icon
