added icon on 'Append VID' btn so it doesn't look like it'll submit

--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.html
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.html
@@ -163,6 +163,9 @@
         nzPopoverTrigger="click"
         [nzPopoverContent]="appendVariant"
         nzPopoverPlacement="bottom">
+        <span
+          nz-icon
+          nzType="arrow-left"></span>
         Append&nbsp;#VID
       </button>
       <ng-template #appendVariant>
