--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
@@ -10,12 +10,12 @@
     width: 100%;
     padding: 8px;
     margin: 4px 0 8px 0;
-    background-color: #FFF;
-    border: 1px solid #EFEFEF;
-    border-radius: 8px;
-    &.active {
-      background-color: white;
-    }
+    // background-color: #FFF;
+    // border: 1px solid #EFEFEF;
+    // border-radius: 8px;
+    // &.active {
+    //   background-color: white;
+    // }
 }
 
 .finder-label {
