mp-select's 'select mp w/ editor' msg resyled to look less like select component

--- a/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
+++ b/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
@@ -13,7 +13,7 @@
           nz-typography
           nzEllipsis
           nzType="secondary">
-          <i>Select a Molecular Profile with the expression editor </i>
+          <i>Select or create a Molecular Profile with the expression editor </i>
         </span>
       </div>
 
