--- a/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.less
+++ b/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.less
@@ -11,6 +11,7 @@ form,
 }
 .editor-message {
   padding: 3px;
-  border: 1px solid #cccccc;
+  background-color: #f5f5f5;
+  cursor: default;
   border-radius: 2px;
 }
