--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
@@ -1,21 +1,19 @@
 :host {
-    display: block;
-    background-color: #F6F6F6;
-    border: 1px solid #DEDEDE;
-    border-radius: 4px;
-    padding: 8px;
+  display: block;
+  background-color: #f6f6f6;
+  border: 1px solid #dedede;
+  border-radius: 4px;
+  padding: 8px;
 }
 
 .expression-preview {
-    width: 100%;
-    padding: 8px;
-    margin: 4px 0 8px 0;
-    // background-color: #FFF;
-    // border: 1px solid #EFEFEF;
-    // border-radius: 8px;
-    // &.active {
-    //   background-color: white;
-    // }
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #dedede;
+  border-radius: 4px;
+  &.active {
+    background-color: white;
+  }
 }
 
 .finder-label {
@@ -24,10 +22,6 @@
   text-align: right;
 }
 .info-row {
-  flex-wrap: nowrap;
-}
-.preview-row {
-  padding-top: 6px;
   flex-wrap: nowrap;
 }
 .action-buttons {
