--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
@@ -1,3 +1,5 @@
+@import "themes/global-variables.less";
+
 :host {
   display: block;
   background-color: #f6f6f6;
@@ -28,4 +30,13 @@
   button {
     height: 38px;
   }
+}
+.append-variant-content {
+  width: 450px;
+}
+
+.var-select-not {
+  line-height: 26px;
+  color: fade(@black, 60%);
+  white-space: nowrap;
 }
