--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
@@ -1,4 +1,4 @@
-@import "themes/global-variables.less";
+@import 'themes/global-variables.less';
 
 :host {
   display: block;
@@ -17,26 +17,9 @@
     background-color: white;
   }
 }
-
-.finder-label {
-  font-weight: 500;
-  line-height: 26px;
-  text-align: right;
-}
-.info-row {
-  flex-wrap: nowrap;
-}
-.action-buttons {
-  button {
-    height: 38px;
-  }
-}
 .append-variant-content {
   width: 450px;
 }
-
-.var-select-not {
-  line-height: 26px;
-  color: fade(@black, 60%);
-  white-space: nowrap;
+.btn-divider {
+  color: #aaa;
 }
