mp-editor's example expression select feature working

--- a/client/src/app/forms2/components/entity-tag/entity-tag.component.less
+++ b/client/src/app/forms2/components/entity-tag/entity-tag.component.less
@@ -102,6 +102,7 @@ nz-tag {
     }
     .tag-label {
       display: inline-block;
+      font-weight: normal;
       margin: 0;
       padding: 0;
       margin: -3px 0 -4px 0;
